--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body {
 .header {
     text-align: center;
     padding: 2%;
+    color: #6B2737;
 }
 
 .search{
@@ -22,9 +23,9 @@ body {
     padding: .7rem 1.5rem;
     font-size: 1.2rem;
     border-radius: 25px;
-    border: 1px solid black;
-    background: rgba(255,255,255, 0.1);
     color: black;
+    background: white;
+    border: 2px solid #6B2737; 
 }
 
 .image {
@@ -39,4 +40,5 @@ body {
     padding: 10px;
     text-align: center;
     width: 40%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
