--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body {
 }
 
 .container {
-    background-color: #EADEDA;
+    background-color:rgba(234, 237, 218, 0.8);
     position: absolute;
     top: 60%;
     left: 50%;
@@ -40,7 +40,7 @@ body {
     padding: 10px;
     text-align: center;
     width: 40%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 }
 
 .error-popup{
